Add new icon assets for dark mode, light mode, and application logo
- Introduced dark-mode.png for dark theme support.
- Added light-mode.png for light theme support.
- Included logo.png for branding purposes.

--- a/GestoXamApp/src/app/pages/exams/exams.component.html
+++ b/GestoXamApp/src/app/pages/exams/exams.component.html
@@ -5,7 +5,7 @@
       <small>{{examsData.length || 0}} examens à venir</small>
     </div>
     <div class="add-exam">
-      <button>Organiser un examen</button>
+      <button routerLink="/exam-form">Organiser un examen</button>
     </div>
   </div>
   <div class="exams-list">
