--- a/GestoXamApp/src/app/app.component.html
+++ b/GestoXamApp/src/app/app.component.html
@@ -1,1 +1,21 @@
+
+<header class="header-layout-container">
+  <div class="logo">
+    <img src="../assets/logo/logo.png" alt="Logo" />
+    <span class="app-title">GestoXam</span>
+  </div>
+  <div class="header-actions">
+    <label class="dark-mode-switch" (click)="toggleDarkMode()">
+      <span class="switch-label">
+        @if (isDarkMode) {
+            <img src="../assets/icons/light-mode.png" alt="light mode">
+        }
+        @else {
+            <img src="../assets/icons/dark-mode.png" alt="dark mode">
+        }
+    </span>
+    </label>
+  </div>
+</header>
+
 <router-outlet />
