--- a/GestoXamApp/src/styles.scss
+++ b/GestoXamApp/src/styles.scss
@@ -18,7 +18,7 @@ body {
   --color-bg: #fefffed6;
   --color-text: #222;
   --header-bg: #fff;
-  --header-title: #222;
+  --header-title: #fc32c6;
   --exams-bg: #fff;
   --exams-title: #222;
   --exam-item-bg: #f9f9f9;
@@ -57,7 +57,7 @@ body.dark-mode {
   --color-bg: #181818;
   --color-text: #eee;
   --header-bg: #222;
-  --header-title: #ffd700;
+  --header-title: #fc32c6;
   --exams-bg: #232323;
   --exams-title: #ffd700;
   --exam-item-bg: #2c2c2c;
@@ -78,7 +78,7 @@ body.dark-mode {
   --input-border: #555;
   --input-focus-border: #ffd700;
   --input-focus-bg: #333;
-  --card-bg: #232323;
+  --card-bg: #23232388;
   --card-border: #333;
   --card-shadow: 0 2px 8px rgba(0,0,0,0.20);
   --shadow: 0 2px 8px rgba(0,0,0,0.20);
