--- a/GestoXamApp/src/app/pages/exams/exams.component.scss
+++ b/GestoXamApp/src/app/pages/exams/exams.component.scss
@@ -287,8 +287,16 @@
     box-shadow: rgba(14, 63, 126, 0.04) 0px 0px 0px 1px, rgba(42, 51, 69, 0.04) 0px 1px 1px -0.5px, rgba(42, 51, 70, 0.04) 0px 3px 3px -1.5px, rgba(42, 51, 70, 0.04) 0px 6px 6px -3px, rgba(14, 63, 126, 0.04) 0px 12px 12px -6px, rgba(14, 63, 126, 0.04) 0px 24px 24px -12px;
     padding: 1.2rem 1.5rem;
     transition: all 0.3s;
+    transform-origin: center;
+    backface-visibility: hidden;
+    
     &:hover {
       transform: translateY(-3px);
+    }
+
+    // Smooth flipOut animation
+    &.animate__flipOutX {
+      animation-fill-mode: forwards;
     }
   }
 
