--- a/GestoXamApp/src/app/shared/components/header/header.component.scss
+++ b/GestoXamApp/src/app/shared/components/header/header.component.scss
@@ -12,7 +12,7 @@
         display: flex;
         align-items: center;
         gap: 1rem;
-
+        cursor: pointer;
 
         .app-title {
             font-size: 1.7rem;
